<resources>
    <string name="app_name">Atlas of Anatomy</string>
    <string name="anatomy">Anatomy</string>
    <string name="type_name">Type your name</string>
    <string name="sign">sign in</string>
    <string name="welcome">Welcome!</string>

    <string name="bones">Bones</string>
    <string name="muscles">Muscles</string>
    <string name="out">Log out</string>

    <string name="notification">Notification</string>
    <string name="press">Нажмите</string>
    <string name="for_return">для возвращения</string>
</resources>