<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/main_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/anatomy" />

    <ImageView
        android:id="@+id/main_image"
        android:src="@drawable/scale_1200"
        android:layout_width="145dp"
        android:layout_height="200dp"
        android:layout_above="@id/main_string"
        android:layout_marginLeft="130dp"
        android:layout_marginBottom="100dp"
        />

    <EditText
        android:id="@+id/main_type_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_name"
        android:layout_below="@id/main_string"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        />

    <Button
        android:id="@+id/main_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_below="@id/main_type_name"
        android:layout_marginTop="90dp"
        />

</RelativeLayout>