<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4">


    <ImageView
        android:id="@+id/main_image"
        android:src="@drawable/scale_1200"
        android:layout_width="145dp"
        android:layout_height="200dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        />


    <TextView
        android:id="@+id/main_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anatomy"
        android:layout_marginStart="170dp"
        android:layout_marginTop="70dp"
        android:layout_weight="1"
        />

    <EditText
        android:id="@+id/main_type_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/type_name"
        android:layout_weight="0.2"
        />

    <Button
        android:id="@+id/main_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="90dp"
        android:layout_weight="0.1"
        />


</LinearLayout>