<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="200dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anatomy"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginStart="145dp"
            />

        <ImageView
            android:id="@+id/muscle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/muscle"
            android:layout_marginTop="80dp"
            android:layout_marginStart="180dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press"
            android:textSize="20sp"
            android:layout_marginTop="90dp"
            android:layout_marginStart="40dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_return"
            android:textSize="20sp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="245dp"
            android:gravity="center"
            />


    </androidx.cardview.widget.CardView>

</RelativeLayout>