<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <EditText
        android:id="@+id/main_type_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/type_name"
        android:inputType="text"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/grey"
        />

    <Button
        android:id="@+id/main_bones"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:text="@string/bones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_muscles"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_png"
        app:layout_constraintVertical_bias="0.314" />

    <Button
        android:id="@+id/main_muscles"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:text="@string/muscles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toEndOf="@+id/main_bones"
        app:layout_constraintTop_toBottomOf="@+id/main_png"
        app:layout_constraintVertical_bias="0.314" />

    <TextView
        android:id="@+id/main_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/anatomy"
        app:layout_constraintBottom_toBottomOf="@id/main_type_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_marginBottom="70dp"
        android:src="@drawable/scale_1200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/second_main_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />



    <ImageView
        android:id="@+id/second_main_image"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_marginBottom="70dp"
        android:src="@drawable/mus_anat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <ImageView
        android:id="@+id/main_png"
        android:layout_width="@dimen/image_width"
        android:layout_height="70dp"
        android:src="@drawable/pngegg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_type_name"
        app:layout_constraintVertical_bias="0.128" />

    <ImageView
        android:id="@+id/main_svg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/muscle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="650dp"
        android:layout_marginStart="330dp"
        />

    <Button
        android:id="@+id/main_notification"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:text="@string/notification"
        app:layout_constraintBottom_toTopOf="@+id/main_type_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />


</androidx.constraintlayout.widget.ConstraintLayout>